
- Issue #2587: In the C API, PyString_FromStringAndSize() takes a signed size
  parameter but was not verifying that it was greater than zero.  Values
  less than zero will now raise a SystemError and return NULL to indicate a
  bug in the calling C code.

- Issue #2588, #2589: Fix potential integer underflow and overflow
  conditions in the PyOS_vsnprintf C API function.


Library
-------

- Issue #2222: Fixed reference leak when occured os.rename()
  fails unicode conversion on 2nd parameter. (windows only)

- Issue #3134: shutil referenced undefined WindowsError symbol.

- Issue #1342811: Fix leak in Tkinter.Menu.delete. Commands associated to
  menu entries were not deleted.

- Issue #799428: Fix Tkinter.Misc._nametowidget to unwrap Tcl command objects.

- Issue #3339: dummy_thread.acquire() could return None which is not a valid
  return value.

- Issue #3116 and #1792:  Fix quadratic behavior in marshal.dumps().

- Issue #2682: ctypes callback functions no longer contain a cyclic
  reference to themselves.

- Issue #2670:  Fix a failure in urllib2.build_opener(), when passed two
  handlers that derive the same default base class.

- Issue #2495: tokenize.untokenize now inserts a space between two consecutive
  string literals; previously, ["" ""] was rendered as [""""], which is
  incorrect python code.

- Issue #2482: Make sure that the coefficient of a Decimal is always
  stored as a str instance, not as a unicode instance.  This ensures
  that str(Decimal) is always an instance of str.  This fixes a
  regression from Python 2.5.1 to Python 2.5.2.

- Issue #2478: fix failure of decimal.Decimal(0).sqrt()

- Issue #2432: give DictReader the dialect and line_num attributes
  advertised in the docs.

- Issue #1747858: Fix chown to work with large uid's and gid's on 64-bit
  platforms.

- Bug #2220: handle rlcompleter attribute match failure more gracefully.

- Bug #1725737: In distutil's sdist, exclude RCS, CVS etc. also in the